# React-Flask

./: .gitignore  .replit  README.md  configure.sh  flask.config.json  index.html  main.py  package-lock.json  package.json  production.sh  pyproject.toml  start.sh  vite.config.js
python/: db.py  user.py
react/: App.jsx  auth.jsx  authform.jsx  greeting.jsx  login.jsx  message.jsx  request.jsx  scrolldal.jsx
scripts/: app.Dockerfile  configure.py  configure.sh  db.Dockerfile  default.conf  development.sh  docker-compose.yml  main.conf  nginx.Dockerfile  options.json  package.json  production.sh
src/: App.css  App.jsx  greeting.jsx  index.css  login.jsx  main.jsx
