[tool.poetry]
name = "repl_React_Flask_Full_Deploy-Template"
version = "0.1.0"
description = "React+Flask full dev to deploy kit"
authors = ["Matthew Parry parry.do@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
vite = "^1.5.2"
replit = "^3.2.4"
gunicorn = "^20.1.0"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"